# cl-irt

./: .gitignore  .gitmodules  GLUE_pyirt.ipynb  LICENSE  Makefile  PLANNING.md  README.md  cal_diff.py  cal_ece.py  cl.env  cl_base.py  diificulty_gen.py  exp.py  exp_transformers.py  generate_diff.py  plot_difficulty_bin_vs_accuracy.py  plot_difficulty_bin_vs_accuracy_bak.py  plot_difficulty_distribution.py  plot_difficulty_vs_p_logits.py  plot_difficulty_vs_predict_accuracy.py  pyproject.toml  roberta.py  run_glue.py  run_glue.script  setup.py
PUDF_GLUE/: PUDF_glue_DebertaV3.py  PUDF_glue_T5.py  PUDF_glue_gpt2.py  build_features.py  glue_PUDF_T5.sh  glue_PUDF_debertav3.sh  glue_PUDF_gpt2.sh
PUDF_Super_GLUE/: PUDF_glue_T5.py  PUDF_glue_gpt2.py  PUDF_superglue_DebertaV3.py  build_features.py  irt_scoring.py  superglue_PUDF_debertaV3.sh
ablation_study/: ablation_GLUE_DebertaV3_predefine_PUDF.py  build_features.py  glue_ablation_IRT_AC_linear.sh  glue_ablation_IRT_AC_root.sh  glue_ablation_sentence_length_DDS_MAE.sh  glue_ablation_word_rarity_DDS_MAE.sh  irt_scoring.py
baseline_GLUE/: baseline_GLUE_T5.py  baseline_GLUE_deberta.py  baseline_GLUE_gpt2.py  glue_deberta.sh  glue_gpt2.sh  glue_t5.sh
baseline_SuperGLUE/: baseline_SuperGLUE_T5.py  baseline_SuperGLUE_debertaV3.py  baseline_SuperGLUE_debertaV3_update.py  baseline_SuperGLUE_gpt2.py  download_data.sh  superglue_debertaV3.sh  superglue_gpt2.sh  superglue_t5.sh
docs/: Makefile  conf.py  index.rst  make.bat
gen_difficulty/: SuperGlue_difficulty.py  cl_base.py  difficulty.py  difficulty_finetuning.py  (+2 more)
(+171 files in other folders)
