[tool.poetry]
name = "cl-irt"
version = "0.1.0"
description = "curriculum learning"
authors = ["John Lalor <john.lalor@nd.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
